--- a/public/assets/css/style_mobile.css
+++ b/public/assets/css/style_mobile.css
@@ -125,6 +125,10 @@ nav .multi:hover .userExt
 	padding-left: 20px; /*hardcoded*/
 }
 
+.overlay .title{
+	white-space: normal;
+}
+
 .scrollH{
 	overflow-y: hidden;
 	overflow-x: scroll;
